--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="IDC-Net jointly generates RGB-D videos with explicit camera control using a geometry-aware diffusion model and transformer block, improving visual and geometric consistency, enabling direct use for 3D scene reconstruction without extra processing.">
+  <meta name="keywords" content="IDCNet, RGBD, video generation, camera control, diffusion model, geometry-aware transformer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IDCNet</title>
 
