--- a/index.html
+++ b/index.html
@@ -482,9 +482,13 @@ downstream 3D reconstruction
   <!-- title     = {Nerfies: Deformable Neural Radiance Fields}, -->
   <!-- journal   = {ICCV}, -->
   <!-- year      = {2021}, -->
-}</code></pre>
+<!-- }</code></pre>
   </div>
-</section> -->
+</section> --> 
+
+<footer style="text-align: center; padding: 20px; margin-top: 40px; color: #888; font-size: 0.9em;">
+  <p>This website template is borrowed from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>.</p>
+</footer>
 
 
 <!-- <footer class="footer">
